ros/servo controller/ros2_ws/log/build_2024-05-30_11-38-06/arm_controller_package/stderr.log
  File "/home/ubuntu/ros2_ws/install/arm_controller_package/lib/python3.10/site-packages/arm_controller_package/PiClient.py", line 63
    print("angles: {}, {}".format(angle1, angle2)
         ^
SyntaxError: '(' was never closed

